#14 added more operations, a redirect link. small fixes.
